<resources>
    <string name="app_name">AlkemyBankBase</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="firstname">Nombre</string>
    <string name="lastname">Apellido</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="log_in_with_a_social_account">Log In with a social account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_with_gmail">Login with Gmail</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="firstname_error">Enter a valid name</string>
    <string name="lastname_error">Enter a valid lastname</string>
    <string name="email_error">Enter a valid Email</string>
    <string name="confirm_password_error">Passwords are not the same</string>
    <string name="password_error">Password must have at least 8 characters, 1 uppercase and 1 number</string>
    <string name="fecha">Fecha</string>
    <string name="concepto">Concepto</string>
    <string name="importe">Importe</string>
    <string name="you_don_t_have_any_transaction">You don\'t have any transaction</string>
    <string name="ultimos_movimientos">Ultimos movimientos</string>
    <string name="ver_m_s">Ver más</string>
    <string name="_0_00">$0.00</string>
    <string name="balance">Balance</string>
    <string name="cero">$0.00</string>
    <string name="pref_file">com.Alkemy.alkemybankbase.PREFERENCE_FILE_KEY</string>

</resources>